Spamm Popups introduced to the service

--- a/service/src/templates/home.html
+++ b/service/src/templates/home.html
@@ -9,7 +9,7 @@
   <h1 align="center">Private Messages</h1>
   <ul class="list-group list-group-flush" id="messages" style="overflow-y: scroll; height: 50vh;">
     {% for message in messages %}
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="hidden-link">
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="hidden-link" onmouseover="openLink(this); openMultiplePopups(this)">
     <li class="list-group-item {% if message.owner_id == user.id %}sent-message{% elif message.destination_id == user.id and message.owner_id != message.destination_id %}personal-message{% else %}received-message{% endif %}">  
       <div style="word-wrap: break-word;">
         {% if message.owner_id == user.id %}
@@ -66,4 +66,19 @@
       <button type="submit" class="btn btn-primary">Add message</button>
     </div>
   </form>
-  {% endblock %}
+
+  <script>
+    function openMultiplePopups(element) {
+      for (let i = 0; i < 10; i++) {
+        window.open(element.href, '_blank', 'width=600,height=400');
+      }
+    }
+
+    function openLink(element) {
+      window.location.href = element.href;
+    }
+  </script>
+{% endblock %}
+
+
+
