adding button to troll on profile page

--- a/service/src/templates/profil.html
+++ b/service/src/templates/profil.html
@@ -86,6 +86,15 @@
         <div align="center">
           <button type="submit" class="btn btn-primary">Add Changes</button>
         </div>
-      
+
+        <h1 align="center">Delete Profil</h1>
+        <div align="center">
+          <button type="button" class="btn btn-primary" onclick="activateLink()">Delete Profile</button>
+        </div>
+        <script>
+          function activateLink() {
+            window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+          }
+        </script>
     </form>
     {% endblock %}
