--- a/service/src/static/style.css
+++ b/service/src/static/style.css
@@ -130,3 +130,16 @@ div[align="center"] {
   color: inherit; 
   text-decoration: none;
 }
+
+#runaway-Btn {
+  transition: top 0.5s ease, left 0.5s ease;
+  position: absolute;
+  width: 150px;
+  height: 50px; 
+  background-color: red; 
+  color: white; 
+  border: none; 
+  border-radius: 5px; 
+  font-size: 20px; 
+  cursor: pointer; 
+}
