--- a/service/src/templates/base.html
+++ b/service/src/templates/base.html
@@ -34,7 +34,7 @@
           <a class="nav-item nav-link" id="userlist" href="/userlist">Userlist</a>
           <a class="nav-item nav-link" id="profil" href="/profil">Profil</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-          <a class="nav-item nav-link" id="flag" href="/flag">Flag</a>
+          <a class="nav-item nav-link" id="flag" href="/flag">Event</a>
           {% else %}
           <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" id="login" href="/login">Login</a>
