--- a/service/src/templates/base.html
+++ b/service/src/templates/base.html
@@ -33,8 +33,9 @@
           <a class="nav-item nav-link" id="groups" href="/creategroup">Groupchats</a>
           <a class="nav-item nav-link" id="userlist" href="/userlist">Userlist</a>
           <a class="nav-item nav-link" id="profil" href="/profil">Profil</a>
-          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           <a class="nav-item nav-link" id="flag" href="/flag">Event</a>
+          <a class="nav-item nav-link" id="add_friend" href="/add_friend">Add Friend</a>
+          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
           <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" id="login" href="/login">Login</a>
