--- a/service/src/templates/base.html
+++ b/service/src/templates/base.html
@@ -20,9 +20,10 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <!-- <a class="navbar-brand" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-        <img src="static/logo.jpg" width="40" height="40" alt="Icon">
-      </a> -->
+      <a class="navbar-brand" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+        <!-- Logo was created by Matti -> GPT4 Picture Mod -->
+        <img src="static/Logo.PNG" width="40" height="40" alt="Icon">
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
         <span class="navbar-toggler-icon"></span>
       </button>
