--- a/service/src/templates/flag.html
+++ b/service/src/templates/flag.html
@@ -16,7 +16,7 @@
         btn.style.top = newY + 'px';
     }
     function clickButton(){
-        window.location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ';
+        window.location.href = 'https://www.youtube.com/shorts/GcUPwqoIEYk';
     }
 </script>
 {% endblock %}
